STAND-136: Replace Docker Compose setup steps with OpenMRS SDK in standalone build scripts